--- a/app/CSS/layout/_nav.css
+++ b/app/CSS/layout/_nav.css
@@ -1,3 +1,4 @@
+
 .nav {
     font-family: 'Poppins', sans-serif;
     display: flex;
@@ -22,6 +23,7 @@
             font-size: 1.8rem;
             text-transform: uppercase;
         }
+        
     }
 }
 
@@ -49,8 +51,9 @@
         position: fixed;
         top: 6.5rem;
         right: 6.5rem;
-        background-image: radial-gradient($nav-burger-light, $nav-burger-dark);
+        background-image: radial-gradient($nav-burger-light, $color-black);
         z-index: 1000;
+        transform: scale(80);
     }
 
     &__nav {
@@ -58,24 +61,52 @@
         width: 100%;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
         z-index: 1500;
 
     }
 
     &__list {
-        @mixin centerXY
-    
-        
-
+        @mixin centerXY;
+        list-style: none;
+        text-align: center;            
     }
 
     &__item {
-
+        margin: 2rem;  
     }
 
+
     &__link {
+        &:link,
+        &:visited {
+            position: relative; //allows underline to start and finish relative to text width
+            display: inline-block;
+            font-size: 3rem;
+            font-weight: 300;
+            text-decoration: none;
+            color: $color-grey-light-1;
+            text-transform: uppercase;  
+        }
 
+        span {
+            margin-right: 1.5rem;
+            display: inline-block;
+        }  
+    }
 
+    &__underline::after {
+        content: '';
+        position: absolute;
+        right: 0;
+        display: block;
+        width: 0;
+        height: 2px;
+        background: $color-white;
+        transition: width .3s;
+    }
+    
+    &__underline:hover::after {
+        width: 100%;
     }
 }
