--- a/app/CSS/abstracts/_mixins.css
+++ b/app/CSS/abstracts/_mixins.css
@@ -4,3 +4,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  @define-mixin smallScreen {
+    @media (min-width: 530px) {
+      @mixin-content;
+    }
+  }
+  @define-mixin mediumScreen {
+    @media (min-width: 800px) {
+      @mixin-content;
+    }
+  }
+  @define-mixin largeScreen {
+    @media (min-width: 1200px) {
+      @mixin-content;
+    }
+  }
