--- a/app/CSS/base/_typography.css
+++ b/app/CSS/base/_typography.css
@@ -1,11 +1,22 @@
+
+
 h1, h2 {
     font-family: 'Roboto', sans-serif;
     color: $color-white;
-    font-size: 5rem;
+    font-size: 2.5rem;
     font-weight: 100;
     margin-top: .1rem;
     margin-bottom: .1rem;
     letter-spacing: .5px;
+    //text-align: left;
+
+    @mixin mediumScreen {
+        font-size: 5rem;
+    }
+
+    @mixin largeScreen {
+        font-size: 6rem;
+    }
 }
 
 .orange {
