--- a/app/CSS/layout/_nav-burger.css
+++ b/app/CSS/layout/_nav-burger.css
@@ -84,7 +84,7 @@
         display: block;
         width: 0;
         height: 2px;
-        background: $color-white;
+        background: orange;
         transition: width .3s;
     }
       
