--- a/app/CSS/style.css
+++ b/app/CSS/style.css
@@ -8,20 +8,19 @@
 @import "base/_typography";
 @import "base/_utilities";
 
+@import "layout/_main-hero";
 @import "layout/_main-title";
 @import "layout/_nav";
 @import "layout/_nav-burger";
+@import "layout/_portfolio";
 
 @import "components/_btn";
+@import "components/_img-align";
 
 
 
 body {
-    background: url(/img/night-sky.jpg) top no-repeat;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
+    
 }
 
 
