--- a/app/CSS/layout/_main-title.css
+++ b/app/CSS/layout/_main-title.css
@@ -6,12 +6,6 @@
     text-align: center;
     padding: 2rem;
     width: 90%;
+    backface-visibility: hidden;
 
-    @mixin mediumScreen {
-        
-    }
-
-    @mixin largeScreen {
-       
-    }
 }
