--- a/app/CSS/base/_utilities.css
+++ b/app/CSS/base/_utilities.css
@@ -2,3 +2,23 @@
     text-align: center;
 }
 
+.section-heading {
+    text-align: center;
+    margin-bottom: 7rem;
+    font-size: 6rem;
+    font-weight: 100;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba($color-white, 0.65);
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 1;
+    -webkit-transition: .45s ease-in-out;
+    transition: .45s ease-in-out;
+}
+
