--- a/app/CSS/layout/_portfolio.css
+++ b/app/CSS/layout/_portfolio.css
@@ -1,6 +1,7 @@
 .section-portfolio {
+    padding: 13rem 0;
     background-color: $color-grey-light-2;
-   & h3 {
+   & h4 {
        margin-bottom: 1rem;
    }
 }
@@ -8,22 +9,48 @@
 .text-box-wrapper {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 3rem;
+    padding-bottom: 5rem;
+    flex-wrap: wrap;
+  &:hover .box:not(:hover) {
+    transform: scale(.98);
   }
   
+}
+  
   .box {
-    padding: 20px;
-    margin-bottom: 20px;
+    flex-grow: 1;
+    position: relative;
+    padding: 1rem;
+    margin: 3rem 2rem;
     /*flex: 1;*/
-    box-sizing: border-box;
-    flex-basis: 30%;
+   flex-basis: 29%;
+   box-shadow: 0 1.5rem 3rem rgba($color-black, 0.4);
+   border-radius: 3px;
+   transition: all .3s;
+  outline-offset: 1.5rem;
+
+  &:hover .overlay {
+    opacity: 1;
+  }
+
+  &:hover .card {
+   visibility: visible;
+   opacity: 1;
+  }
+   
+  @mixin extraLargeScreen {
+    &:hover {
+      outline: 1rem solid orange;
+      transform: scale(1.02) translateY(-1.5rem);
+    }
+   }
   }
   
   .box:nth-child(1) {background-color: pink;}
   .box:nth-child(2) {background-color: orange;}
   .box:nth-child(3) {background-color: orangered;}
   
-  @media (min-width: 900px) {
+  @mixin mediumScreen {
     .text-box-wrapper {
       display: flex;
       justify-content: space-between;
