add animations to all portfolio cards

--- a/app/CSS/style.css
+++ b/app/CSS/style.css
@@ -16,13 +16,7 @@
 
 @import "components/_btn";
 @import "components/_img-align";
-@import "components/_caption";
-
-
-
-body {
-    
-}
+@import "components/_card";
 
 
 
