--- a/app/CSS/base/_utilities.css
+++ b/app/CSS/base/_utilities.css
@@ -3,6 +3,7 @@
 }
 
 .section-heading {
+    font-family: 'roboto', 'sans-serif';
     text-align: center;
     margin-bottom: 7rem;
     font-size: 6rem;
@@ -13,3 +14,6 @@
     display: inline-block;
 }
 
+.extended-spacing {
+    margin-top: 16rem;
+}
