--- a/app/CSS/layout/_main-hero.css
+++ b/app/CSS/layout/_main-hero.css
@@ -1,9 +1,18 @@
 .wrapper {
-    height: 100vh;
-    
+    position: relative;
+    z-index: 100;
+    height: 135vh;
     background: url(/img/night-sky.jpg) top no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     background-attachment: fixed;
+
+    -webkit-clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0% 85%, 0 0);
+    clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0% 85%, 0 0);
+
+@mixin extraSmallScreen {   
+    webkit-clip-path: polygon(50% 0%, 100% 0, 100% 95%, 50% 100%, 0% 95%, 0 0);
+    clip-path: polygon(50% 0%, 100% 0, 100% 95%, 50% 100%, 0% 95%, 0 0);
+}
 }
