--- a/app/CSS/layout/_portfolio.css
+++ b/app/CSS/layout/_portfolio.css
@@ -1,5 +1,8 @@
 .section-portfolio {
-    padding: 13rem 0;
+  z-index: -2;
+  transform: translateY(-20rem);
+  padding-top: 13rem;
+  padding-bottom: 2rem;
     background-color: $color-grey-light-2;
    & h4 {
        margin-bottom: 1rem;
