--- a/app/CSS/layout/_contact.css
+++ b/app/CSS/layout/_contact.css
@@ -82,6 +82,42 @@ form {
     padding: .5rem 0;
 
     &:hover {
-        background-color: red;
+        background-color: rgb(93, 250, 93);
     }
   }
+
+  
+  .input-container {
+    width: 60rempx;
+    position: relative;
+   }
+   .form-control {
+    border: 0;
+    padding: 10px 0;
+    border-bottom: 1px solid #ccc;
+     outline: none;
+   }
+   .border {
+    position: absolute;
+    bottom: -1rem;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #04C2C9;
+   }
+   .form-control:focus ~ .border {
+    width: 100%;
+    transition: 0.5s;
+   }
+   .textarea-border {
+    position: absolute;
+    bottom: -.5rem;
+    left: 0;
+    width: 0;
+    height: 2px;
+    background-color: #04C2C9;
+   }
+   .form-control:focus ~ .textarea-border {
+    width: 100%;
+    transition: 0.5s;
+   }
