--- a/app/CSS/layout/_nav.css
+++ b/app/CSS/layout/_nav.css
@@ -1,3 +1,11 @@
+.nav-wrapper {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    background-color: red;
+
+}
+
 .nav-content {
     position: relative;
     display: none;
