add svg arrow and adjust nav

--- a/app/CSS/layout/_about.css
+++ b/app/CSS/layout/_about.css
@@ -42,7 +42,7 @@
 
 
 .icon-shift-up {
-    transform: translateY(-1rem);
+    transform: translateY(-.5rem);
 }
 .icon-shift-down-1 {
     transform: translateY(1rem);
