--- a/app/CSS/layout/_nav.css
+++ b/app/CSS/layout/_nav.css
@@ -1,7 +1,7 @@
 .nav-wrapper {
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 1000;
     background-color: red;
 
 }
@@ -20,7 +20,7 @@
     justify-content: flex-start;
     align-items: center;
     background-color: rgba($nav, 0.1);
-    min-height: 6vh;
+    height: 6vh;
     //visibility: hidden;
 
     &__links {
