--- a/app/CSS/abstracts/_variables.css
+++ b/app/CSS/abstracts/_variables.css
@@ -10,7 +10,7 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
-$nav: #F5BE3F;
+$nav: #333;
 
 $nav-burger-light: #0000FF;
 $nav-burger-dark: #00008B;
