--- a/app/CSS/base/_utilities.css
+++ b/app/CSS/base/_utilities.css
@@ -6,6 +6,7 @@
     font-family: 'roboto', 'sans-serif';
     text-align: center;
     margin-bottom: 7rem;
+    padding-top: 6rem;
     font-size: 6rem;
     font-weight: 100;
 }
