--- a/app/CSS/layout/_nav.css
+++ b/app/CSS/layout/_nav.css
@@ -2,7 +2,7 @@
     position: fixed;
     width: 100%;
     z-index: 1000;
-    background-color: red;
+    //background-color: red;
 
 }
 
@@ -19,8 +19,12 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: rgba($nav, 0.1);
+    background-color: rgba($nav, 0.35);
     height: 6vh;
+    transition: all 1s ease-in;
+    &--dark {
+        background-color: rgba($nav, 0.95);
+    }
     //visibility: hidden;
 
     &__links {
@@ -42,12 +46,18 @@
             color: $color-white;
             text-decoration: none;
             letter-spacing: 1px;
-            font-weight: 200;
+            font-weight: 100;
             font-size: 1.8rem;
             text-transform: uppercase;
             padding-bottom: 7px;
             position: relative;
-          
+            transition: all .4s ease-in;
+
+            &.is-current-link {
+                //letter-spacing: 6px;
+                color: #ffc966;
+            }
+
              &:before,
               &:after {
                   content: '';
@@ -55,7 +65,7 @@
                   bottom: 2px;
                   left: 0; right: 0;
                   height: 2px;
-                  background-color: orange;
+                  background-color: #ffc966;
               }
               &:before {
                   opacity: 0;
@@ -67,8 +77,8 @@
                   transform: translateY(8px/2);
                   transition: transform .2s cubic-bezier(0.175, 0.885, 0.320, 1.275), opacity .2s;
               }
-              &:hover,
-              &:focus {
+              &:hover
+             {
                   &:before,
                   &:after {
                       opacity: 1;
