--- a/app/CSS/style.css
+++ b/app/CSS/style.css
@@ -8,6 +8,7 @@
 @import "base/_typography";
 @import "base/_utilities";
 @import "base/_sprite";
+@import "base/reveal-items";
 
 @import "layout/_main-hero";
 @import "layout/_main-title";
