add resized jpgs

--- a/app/CSS/layout/_portfolio.css
+++ b/app/CSS/layout/_portfolio.css
@@ -42,12 +42,7 @@
    opacity: 1;
   }
    
-  @mixin extraLargeScreen {
-    &:hover {
-      outline: 1rem solid orange;
-      transform: scale(1.02) translateY(-1.5rem);
-    }
-   }
+  
   }
   
 
@@ -58,3 +53,9 @@
       justify-content: space-between;
     }
   }
+  @mixin extraLargeScreen {
+    main section div.box:hover {
+      outline: 1rem solid orange;
+      transform: scale(1.02) translateY(-1.5rem);
+    }
+   }
