--- a/app/CSS/layout/_contact.css
+++ b/app/CSS/layout/_contact.css
@@ -2,8 +2,8 @@
     margin-top: 1rem;
     padding-top: 1rem;
     padding-bottom: 18rem;
-    background-image: url('/img/earth-from-space.jpg');
-    background-image: linear-gradient(to bottom, rgba($color-white, .6) 0%,rgba($color-white, .6) 100%), url('/img/earth-from-space.jpg');
+    background-image: url('../../img/earth-from-space.jpg');
+    background-image: linear-gradient(to bottom, rgba($color-white, .6) 0%,rgba($color-white, .6) 100%), url('../../img/earth-from-space.jpg');
     background-size: cover;
 
     &__footer {
