--- a/app/CSS/layout/_main-hero.css
+++ b/app/CSS/layout/_main-hero.css
@@ -2,7 +2,7 @@
     position: relative;
     z-index: 100;
     height: 135vh;
-    background: url(/img/night-sky.jpg) top no-repeat;
+    background: url(../../img/night-sky.jpg) top no-repeat;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
