--- a/app/CSS/layout/_portfolio.css
+++ b/app/CSS/layout/_portfolio.css
@@ -1,5 +1,5 @@
 .section-portfolio {
-  z-index: -2;
+  /* z-index: -2; */
   transform: translateY(-20rem);
   padding-top: 13rem;
   padding-bottom: 2rem;
